# ai_scan

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: db.py  main.py  schemas.py
app/endpoints/: register.py  track.py
db/: create_tables.py  tables.sql
sdk/: sdk.js
summary/: aggregator.py  db.py  events_loader.py  selector.py  sql.py  worker.py
