[project]
name = "ai-scan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.121.2",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
]
